--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run beldeanucalin/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket-name: "elasticbeanstalk-us-east-1-024178468212"
+  bucket-path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_acccess_key: "$AWS_SECRET_KEY"
