--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   bucket-name: "elasticbeanstalk-us-east-1-024178468212"
   bucket-path: "docker-react"
   on:
-    branch: master
+    branch: main
   access_key_id: $AWS_ACCESS_KEY
   secret_acccess_key: "$AWS_SECRET_KEY"
