--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t beldeanucalin/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run beldeanucalin/docker-react npm run test -- --coverage
+  - docker run -e CI=true beldeanucalin/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
